更新博客，修正搜索框bug，完善主题，增加toc插件

--- a/docs/杂项/博客建站记录/博客建站记录.md
+++ b/docs/杂项/博客建站记录/博客建站记录.md
@@ -1,4 +1,4 @@
-!!! abstract
+!!! note
     建站感谢两位大佬：[咸鱼暄](https://xuan-insr.github.io/)、[鹤翔万里](https://note.tonycrane.cc/#oo-hi)的博客给我提供了非常多帮助，甚至大部分我都直接复制粘贴( 
 
 ## 框架选择
@@ -73,6 +73,50 @@ java version "21.0.2" 2024-01-16 LTS
 Java(TM) SE Runtime Environment (build 21.0.2+13-LTS-58)
 Java HotSpot(TM) 64-Bit Server VM (build 21.0.2+13-LTS-58, mixed mode, sharing)
 ```
+
+---
+**用作index归纳的插件**
+
+这个照样是大佬写的插件[mkdocs-toc-plugin](https://github.com/TonyCrane/mkdocs-toolchain/tree/master)
+
+{{ BEGIN_TOC }}
+- a:
+    - b(没有内容不要点击): ./
+    - c(没有内容不要点击)[note]: ./
+- d:
+    - e(没有内容不要点击)[note][lab]: ./
+    
+{{ END_TOC }}
+
+
+
+这里我要再次感叹chatgpt的神奇了，这是一个为发布的插件，但是作者把它开源了，但是我没有用过不知道怎么安装，我把目录结构丢进gpt。再把报错丢给它，完美解决安装问题了。这里我给不知道如何安装的朋友简单写一下。
+
+这是我的目录结构
+```bash
+|-- mkdocs_toc_plugin/
+|   |-- __init__.py
+|   |-- plugin.py
+|   |-- utils.py
+|   |-- css/
+|   |-- templates/
+|-- setup.py
+```
+在cmd中输入
+```bash
+python setup.py develop
+```
+不报错的话，会生成一个`mkdocs_toc_plugin.egg-info`文件，这就说明安装好了。
+
+在`mkdocs.yml`中加入
+```yml
+plugins:
+  - toc
+```
+就到了最后一步了，我就出错在这里，这个插件格式要求比较严格，我复制没有注意导致格式错了，一直报错，请注意！并且我刚才发现这个插件不支持标题全数字。
+
+安装完可以删除源代码文件了，如果你想自己修改可以不删除。
+
 
 我整理的时候发现有些好像是markdown自带的，哈哈哈，考研把太多东西都忘记了，还有好多好多好看的样式，你也可以自己写，也不难，我只是太懒了，甚至博客文件都是现成拉的，以后还会整理一下的。
 
