修改为自己的内容

--- a/docs/杂项/博客建站记录/博客建站记录.md
+++ b/docs/杂项/博客建站记录/博客建站记录.md
@@ -90,7 +90,7 @@ Java HotSpot(TM) 64-Bit Server VM (build 21.0.2+13-LTS-58, mixed mode, sharing)
 
 
 
-这里我要再次感叹chatgpt的神奇了，这是一个为发布的插件，但是作者把它开源了，但是我没有用过不知道怎么安装，我把目录结构丢进gpt。再把报错丢给它，完美解决安装问题了。这里我给不知道如何安装的朋友简单写一下。
+这里我要再次感叹chatgpt的神奇了，这是一个未发布的插件，但是作者把它开源了，但是我没有用过不知道怎么安装，我把目录结构丢进gpt。再把报错丢给它，完美解决安装问题了。这里我给不知道如何安装的朋友简单写一下。
 
 这是我的目录结构
 ```bash
