搬运笔记，增加图片

--- a/docs/杂项/博客建站记录/博客建站记录.md
+++ b/docs/杂项/博客建站记录/博客建站记录.md
@@ -4,7 +4,9 @@
 ## 框架选择
 
 我之前用的是[docsify](https://docsify.js.org/#/) ，个人感觉太素了，给人一种文档的感觉，docsify本来也就大量被用于文档的部署，主要原因我太懒我不想折腾了，我想有一个有大量插件生态，或者现成方案，并且非常好看，简洁而又不简陋的框架。
+![image-20240204180536538](博客建站记录.assets/image-20240204180536538.png)
 
+![image-20240204180604196](博客建站记录.assets/image-20240204180604196.png)
 偶然，我在B站看实现git的视频，打开了Up主的博客也就是[咸鱼暄](https://xuan-insr.github.io/)，我觉得就是这种感觉，是我喜欢的，支持评论，UI生态丰富，大量插件，所以决定使用[mkdocs-material](https://squidfunk.github.io/mkdocs-material/)
 
 ---
