refactor: 图片资源统一管理

--- a/docs/项目开发/api开放平台/基础模板学习.md
+++ b/docs/项目开发/api开放平台/基础模板学习.md
@@ -260,7 +260,7 @@ Post post = postService.getById(id);
 
 若是执行不成功，有两个地方抛出异常，一个是`controller`层，一个是`serviveImpl`，通过throw的方式抛出自定义实现的错误类`BusinessException`，`BusinessException`内部定义了一个code私有变量，接收一个`ErrorCode`枚举类，在`ErrorCode`中我们定义了code和message，message信息通过继承的父类构造方法`RuntimeException`抛出。
 
-![image-20240307203408172](基础模板学习.assets/image-20240307203408172.png)
+![image-20240307203408172](.assets/image-20240307203408172.png)
 
 
 
